Using snapshot data doesn't work, suppress illegal access warnings.